--- a/.github/workflows/ci-locks.yml
+++ b/.github/workflows/ci-locks.yml
@@ -49,11 +49,11 @@ jobs:
     - name: "Conda install"
       uses: conda-incubator/setup-miniconda@v2
       with:
-        miniforge-variant: Mambaforge
-        miniforge-version: latest
+        #miniforge-variant: Mambaforge
+        #miniforge-version: latest
         #use-mamba: true
         activate-environment: ${{ env.ENV_NAME }}
-        auto-update-conda: false
+        auto-update-conda: true 
         use-only-tar-bz2: true
 
     - name: "Conda environment cache"
