--- a/.github/workflows/ci-locks.yml
+++ b/.github/workflows/ci-locks.yml
@@ -22,7 +22,7 @@ jobs:
         shell: bash -l {0}
     env:
       ENV_NAME: "ci-locks"
-      #CONDA_EXE: "mamba"
+      CONDA_EXE: "mamba"
     strategy:
       matrix:
         lock: [py38-lock, py39-lock, py310-lock]
@@ -49,10 +49,10 @@ jobs:
     - name: "Conda install"
       uses: conda-incubator/setup-miniconda@v2
       with:
-        #miniforge-variant: Mambaforge
-        #miniforge-version: latest
-        #use-mamba: true
-        channels: conda-forge
+        miniforge-variant: Mambaforge
+        miniforge-version: 4.11.0-1
+        use-mamba: true
+        channels: conda-forge,defaults
         activate-environment: ${{ env.ENV_NAME }}
         auto-update-conda: true 
         use-only-tar-bz2: true
@@ -89,8 +89,8 @@ jobs:
 
     - name: "Create ${{ matrix.lock }} conda locks"
       run: |
-        #tox -e ${{ matrix.lock }} -- --mamba --platform osx-64 --platform win-64
-        tox -e ${{ matrix.lock }} -- --platform osx-64 --platform win-64
+        tox -e ${{ matrix.lock }} -- --mamba --platform osx-64 --platform win-64
+        #tox -e ${{ matrix.lock }} -- --platform osx-64 --platform win-64
 
     - name: "Upload lock artifacts"
       uses: actions/upload-artifact@v2
