--- a/.github/workflows/ci-wheels.yml
+++ b/.github/workflows/ci-wheels.yml
@@ -75,8 +75,9 @@ jobs:
       uses: conda-incubator/setup-miniconda@v2
       with:
         miniforge-variant: Mambaforge
-        miniforge-version: latest
+        miniforge-version: 4.11.0-1
         use-mamba: true
+        channels: conda-forge,defaults
         activate-environment: ${{ env.ENV_NAME }}
         auto-update-conda: false
         use-only-tar-bz2: true
