add cli support

--- a/tox.ini
+++ b/tox.ini
@@ -72,5 +72,5 @@ setenv =
 usedevelop =
     true
 commands =
-    # sphinx-build -W --keep-going -b {env:BUILDER} -d {env:BUILDDIR}{/}doctrees {env:SRCDIR} {env:BUILDDIR}{/}{env:BUILDER} {posargs}
-    sphinx-build -b {env:BUILDER} -d {env:BUILDDIR}{/}doctrees {env:SRCDIR} {env:BUILDDIR}{/}{env:BUILDER} {posargs}
+    geovista download --all
+    sphinx-build -W --keep-going -b {env:BUILDER} -d {env:BUILDDIR}{/}doctrees {env:SRCDIR} {env:BUILDDIR}{/}{env:BUILDER} {posargs}
