tox docs download natural-earth physical

--- a/tox.ini
+++ b/tox.ini
@@ -72,5 +72,5 @@ setenv =
 usedevelop =
     true
 commands =
-    geovista download --all
+    geovista download --natural-earth physical
     sphinx-build -W --keep-going -b {env:BUILDER} -d {env:BUILDDIR}{/}doctrees {env:SRCDIR} {env:BUILDDIR}{/}{env:BUILDER} {posargs}
