--- a/.github/workflows/ci-wheels.yml
+++ b/.github/workflows/ci-wheels.yml
@@ -10,7 +10,7 @@
 
 name: ci-wheels
 
-on: [pull_request, push, release]
+on: [pull_request, push]
 
 
 jobs:
@@ -118,8 +118,8 @@ jobs:
     needs: [test-artifacts]
     name: "Publish to Test PyPI"
     runs-on: ubuntu-latest
-    # upload to Test PyPI for every pull-request and commit on main or release feature branch
-    if: github.event_name != 'release' && ((github.event.ref == 'refs/heads/main') || startsWith(github.event.ref, 'refs/tags/v'))
+    # upload to Test PyPI for every commit on main branch
+    if: github.event_name == 'push' && github.event.ref == 'refs/heads/main'
     steps:
     - uses: actions/download-artifact@v2
       with:
@@ -139,8 +139,8 @@ jobs:
     needs: [test-artifacts]
     name: "Publish to PyPI"
     runs-on: ubuntu-latest
-    # upload to PyPI for every GH release
-    if: github.event_name == 'release' && github.event.action == 'published'
+    # upload to PyPI for every tag starting with 'v'
+    if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/v')
     steps:
     - uses: actions/download-artifact@v2
       with:
