--- a/requirements/geovista.yml
+++ b/requirements/geovista.yml
@@ -7,6 +7,8 @@ dependencies:
 
 # setup dependencies
   - setuptools >=45
+  - setuptools_scm[toml] >=6.2
+  - setuptools_scm_git_archive
 
 # core dependencies
   - cartopy >=0.20
