--- a/.github/workflows/ci-locks.yml
+++ b/.github/workflows/ci-locks.yml
@@ -22,7 +22,6 @@ jobs:
         shell: bash -l {0}
     env:
       ENV_NAME: "ci-locks"
-      CONDA_EXE: "mamba"
     strategy:
       matrix:
         lock: [py38-lock, py39-lock, py310-lock]
@@ -41,7 +40,7 @@ jobs:
       uses: actions/cache@v2
       env:
         # Increment the build number to force a cache refresh.
-        CACHE_BUILD: 0
+        CACHE_BUILD: 1
       with:
         path: ~/conda_pkgs_dir
         key: ${{ runner.os }}-conda-pkgs-${{ env.ENV_NAME }}-p${{ env.CACHE_PERIOD }}-b${{ env.CACHE_BUILD }}
@@ -49,9 +48,6 @@ jobs:
     - name: "Conda install"
       uses: conda-incubator/setup-miniconda@v2
       with:
-        miniforge-variant: Mambaforge
-        miniforge-version: 4.11.0-1
-        use-mamba: true
         channels: conda-forge,defaults
         activate-environment: ${{ env.ENV_NAME }}
         auto-update-conda: true 
@@ -62,7 +58,7 @@ jobs:
       uses: actions/cache@v2
       env:
         # Increment the build number to force a cache refresh.
-        CACHE_BUILD: 0
+        CACHE_BUILD: 1
       with:
         path: ${{ env.CONDA }}/envs/${{ env.ENV_NAME }}
         key: ${{ runner.os }}-conda-env-${{ env.ENV_NAME }}-p${{ env.CACHE_PERIOD }}-b${{ env.CACHE_BUILD }}
@@ -70,7 +66,7 @@ jobs:
     - name: "Conda environment update"
       if: steps.conda-env-cache.outputs.cache-hit != 'true'
       run: |
-        mamba install --name ${{ env.ENV_NAME }} tox
+        conda install --name ${{ env.ENV_NAME }} tox
 
     - name: "Conda info"
       run: |
@@ -81,7 +77,7 @@ jobs:
       uses: actions/cache@v2
       env:
         # Increment the build number to forece a cache refresh.
-        CACHE_BUILD: 0
+        CACHE_BUILD: 1
         TOX_INI: ${{ github.workspace }}/tox.ini
       with:
         path: ${{ github.workspace }}/.tox
@@ -89,7 +85,7 @@ jobs:
 
     - name: "Create ${{ matrix.lock }} conda locks"
       run: |
-        tox -e ${{ matrix.lock }} -- --mamba --platform osx-64 --platform win-64
+        tox -e ${{ matrix.lock }} -- --platform osx-64 --platform win-64
 
     - name: "Upload lock artifacts"
       uses: actions/upload-artifact@v2
