--- a/.github/workflows/ci-wheels.yml
+++ b/.github/workflows/ci-wheels.yml
@@ -66,7 +66,7 @@ jobs:
       uses: actions/cache@v2
       env:
         # Increment the build number to force a cache refresh.
-        CACHE_BUILD: 0
+        CACHE_BUILD: 1
       with:
         path: ~/conda_pkgs_dir
         key: ${{ runner.os }}-conda-pkgs-${{ env.ENV_NAME }}-${{ matrix.version }}-p${{ env.CACHE_PERIOD }}-b${{ env.CACHE_BUILD }}
@@ -74,9 +74,6 @@ jobs:
     - name: "Conda install"
       uses: conda-incubator/setup-miniconda@v2
       with:
-        miniforge-variant: Mambaforge
-        miniforge-version: 4.11.0-1
-        use-mamba: true
         channels: conda-forge,defaults
         activate-environment: ${{ env.ENV_NAME }}
         auto-update-conda: false
@@ -87,7 +84,7 @@ jobs:
       uses: actions/cache@v2
       env:
         # Increment the build number to force a cache refresh.
-        CACHE_BUILD: 0
+        CACHE_BUILD: 1
       with:
         path: ${{ env.CONDA }}/envs/${{ env.ENV_NAME }}
         key: ${{ runner.os }}-conda-env-${{ env.ENV_NAME }}-${{ matrix.version }}-p${{ env.CACHE_PERIOD }}-b${{ env.CACHE_BUILD }}
@@ -95,7 +92,7 @@ jobs:
     - name: "Conda environment update"
       if: steps.conda-env-cache.outputs.cache-hit != 'true'
       run: |
-        mamba install --file ${{ github.workspace }}/requirements/locks/${{ matrix.version }}-lock-linux-64.txt
+        conda install --file ${{ github.workspace }}/requirements/locks/${{ matrix.version }}-lock-linux-64.txt
 
     - name: "Conda info"
       run: |
