--- a/.github/workflows/ci-docs.yml
+++ b/.github/workflows/ci-docs.yml
@@ -5,7 +5,14 @@
 
 name: ci-docs
 
-on: [push]
+on:
+  pull_request:
+  
+  push:
+    branches-ignore:
+      - "conda-lock-auto-update"
+      - "pre-commit-ci-update-config"
+      - "dependabot/*"
 
 
 jobs:
