--- a/.github/workflows/ci-wheels.yml
+++ b/.github/workflows/ci-wheels.yml
@@ -10,7 +10,14 @@
 
 name: ci-wheels
 
-on: [pull_request, push]
+on:
+  pull_request:
+  
+  push:
+    branches-ignore:
+      - "conda-lock-auto-update"
+      - "pre-commit-ci-update-config"
+      - "dependabot/*"
 
 
 jobs:
