enable pooch mute

--- a/tox.ini
+++ b/tox.ini
@@ -69,6 +69,7 @@ setenv =
     BUILDDIR = {toxinidir}/docs/_build
     SRCDIR = {toxinidir}/docs/src
     PYVISTA_OFF_SCREEN = True
+    GEOVISTA_POOCH_MUTE = True
 usedevelop =
     true
 commands =
