--- a/.github/workflows/ci-locks.yml
+++ b/.github/workflows/ci-locks.yml
@@ -51,7 +51,7 @@ jobs:
         miniforge-version: latest
         channels: conda-forge,defaults
         activate-environment: ${{ env.ENV_NAME }}
-        auto-update-conda: true 
+        auto-update-conda: false
         use-only-tar-bz2: true
 
     - name: "Conda environment cache"
@@ -109,11 +109,18 @@ jobs:
         name: lock-artifacts
         path: ${{ github.workspace }}/requirements/locks
 
+    - name: "Generate token"
+      uses: tibdex/github-app-token@v1
+      id: generate-token
+      with:
+        app_id: ${{ secrets.AUTH_APP_ID }}
+        private_key: ${{ secrets.AUTH_APP_PRIVATE_KEY }}
+
     - name: "Push pull-request"
       id: cpr
-      # v3.12.1 (release date 31 Jan 2022)
       uses: peter-evans/create-pull-request@923ad837f191474af6b1721408744feb989a4c27
       with:
+        token: ${{ steps.generate-token.outputs.token }}
         add-paths: ${{ github.workspace }}/requirements/locks/*.txt
         commit-message: "updated conda lock files"
         branch: conda-lock-auto-update
