--- a/setup.cfg
+++ b/setup.cfg
@@ -94,7 +94,7 @@ docs =
     sphinx
     sphinx-copybutton
     jupyter-sphinx
-    pydata-sphinx-theme
+    pydata-sphinx-theme<9
     pythreejs
 dev =
     pre-commit
