--- a/setup.cfg
+++ b/setup.cfg
@@ -54,7 +54,7 @@ keywords =
     ugrid
     vtk
 license = BSD 3-Clause License
-license_file = LICENSE
+license_files = LICENSE
 name = geovista
 project_urls =
     Code = https://github.com/bjlittle/geovista
@@ -94,7 +94,7 @@ docs =
     sphinx
     sphinx-copybutton
     jupyter-sphinx
-    pydata-sphinx-theme<9
+    pydata-sphinx-theme<9.0
     pythreejs
 dev =
     pre-commit
