--- a/.github/workflows/ci-wheels.yml
+++ b/.github/workflows/ci-wheels.yml
@@ -14,6 +14,8 @@ on:
   pull_request:
   
   push:
+    tags:
+      - "v*"
     branches-ignore:
       - "conda-lock-auto-update"
       - "pre-commit-ci-update-config"
