--- a/setup.cfg
+++ b/setup.cfg
@@ -77,7 +77,7 @@ install_requires =
     vtk>=9
 package_dir =
     =lib
-packages = find:
+packages = find_namespace:
 python_requires =
     >=3.8
 zip_safe = False 
@@ -94,7 +94,7 @@ docs =
     sphinx
     sphinx-copybutton
     jupyter-sphinx
-    pydata-sphinx-theme<9.0
+    pydata-sphinx-theme<0.9
     pythreejs
 dev =
     pre-commit
