--- a/.github/workflows/ci-locks.yml
+++ b/.github/workflows/ci-locks.yml
@@ -130,6 +130,8 @@ jobs:
         delete-branch: true
         title: "[geovista.ci] conda lock auto-update"
         body: |
+          🤖 Bleep! Bloop!
+          
           Conda lock files auto-updated to latest resolved environment for `geovista` dependencies.
         labels: |
           new: pull request
