--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -40,8 +40,9 @@ jobs:
             posargs: "--cov-report=xml --cov"
             post-command: codecov
     steps:
-    - name: "Checkout"
-      uses: actions/checkout@v3
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
 
     - name: "Environment configure"
       env:
