--- a/.github/workflows/ci-locks.yml
+++ b/.github/workflows/ci-locks.yml
@@ -29,8 +29,9 @@ jobs:
       matrix:
         lock: [py38-lock, py39-lock, py310-lock]
     steps:
-    - name: "Checkout"
-      uses: actions/checkout@v3
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
 
     - name: "Environment configure"
       env:
@@ -103,8 +104,9 @@ jobs:
     name: "Create pull-request"
     runs-on: ubuntu-latest
     steps:
-    - name: "Checkout"
-      uses: actions/checkout@v3
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
 
     - name: "Download lock artifacts"
       uses: actions/download-artifact@v3
