--- a/tox.ini
+++ b/tox.ini
@@ -32,7 +32,7 @@ commands =
     conda-lock --channel conda-forge --kind explicit --file {env:TMPFILE} --platform linux-64 --filename-template "{envname}-\{platform\}.txt" {posargs}
 
 
-[testenv:py{38,39,310}-{linux,osx,win}-test]
+[testenv:py{38,39,310}-{linux,osx,win}-tests]
 conda_spec =
     py38-linux: {toxinidir}{/}requirements{/}locks{/}py38-lock-linux-64.txt
     py39-linux: {toxinidir}{/}requirements{/}locks{/}py39-lock-linux-64.txt
@@ -55,9 +55,17 @@ commands =
     {env:POST_COMMAND:}
 
 
-[testenv:doc-{build,linkcheck,test}]
+[testenv:py{38,39,310}-{linux,osx-win}-doc-{build,linkcheck,tests}]
 conda_spec =
-    {toxinidir}{/}requirements{/}locks{/}py310-lock-linux-64.txt
+    py38-linux: {toxinidir}{/}requirements{/}locks{/}py38-lock-linux-64.txt
+    py39-linux: {toxinidir}{/}requirements{/}locks{/}py39-lock-linux-64.txt
+    py310-linux: {toxinidir}{/}requirements{/}locks{/}py310-lock-linux-64.txt
+    py38-osx: {toxinidir}{/}requirements{/}locks{/}py38-lock-osx-64.txt
+    py39-osx: {toxinidir}{/}requirements{/}locks{/}py39-lock-osx-64.txt
+    py310-osx: {toxinidir}{/}requirements{/}locks{/}py310-lock-osx-64.txt
+    py38-win: {toxinidir}{/}requirements{/}locks{/}py38-lock-win-64.txt
+    py39-win: {toxinidir}{/}requirements{/}locks{/}py39-lock-win-64.txt
+    py310-win: {toxinidir}{/}requirements{/}locks{/}py310-lock-win-64.txt
 description =
     Build, test and link-check the geovista documentation.
 envdir =
@@ -65,7 +73,7 @@ envdir =
 setenv =
     doc-build: BUILDER = html
     doc-linkcheck: BUILDER = linkcheck
-    doc-test: BUILDER = doctest
+    doc-tests: BUILDER = doctest
     BUILDDIR = {toxinidir}/docs/_build
     SRCDIR = {toxinidir}/docs/src
     PYVISTA_OFF_SCREEN = True
