ci-wheels composite gha

--- a/.github/workflows/ci-locks.yml
+++ b/.github/workflows/ci-locks.yml
@@ -30,6 +30,7 @@ jobs:
       ENV_NAME: "ci-locks"
 
     strategy:
+      fail-fast: false
       matrix:
         os: ["ubuntu-latest"]
         version: ["py38", "py39", "py310"]
