--- a/.github/workflows/ci-wheels.yml
+++ b/.github/workflows/ci-wheels.yml
@@ -12,6 +12,8 @@ name: ci-wheels
 
 on:
   pull_request:
+    branches:
+      - "*"
   
   push:
     tags:
@@ -27,22 +29,25 @@ concurrency:
 
 jobs:
   build-artifacts:
-    name: "Build PyPI artifacts"
+    name: "build pypi artifacts"
+
     runs-on: ubuntu-latest
+
     defaults:
       run:
         shell: bash -l {0}
+
     steps:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0
 
-    - name: "Build sdist/bdist"
+    - name: "build sdist and wheel"
       run: |
         # geovista is a pure python package, so simply use pypa/build
         pipx run build
 
-    - name: "Show sdist/bdist"
+    - name: "show sdist and wheel"
       run: |
         ls -l ${{ github.workspace }}/dist
 
@@ -54,38 +59,50 @@ jobs:
 
   test-artifacts:
     needs: [build-artifacts]
-    name: "Test bdist with ${{ matrix.version }}"
+
+    name: "test wheel (${{ matrix.version }})"
+
     runs-on: ubuntu-latest
+
     defaults:
       run:
         shell: bash -l {0}
+
     env:
       ENV_NAME: "ci-wheels"
+
     strategy:
+      fail-fast: false
       matrix:
-        version: [py38, py39, py310]
+        version: ["py38", "py39", "py310"]
+        session: ["env"]
+
     steps:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0
 
-    - name: "Environment configure"
+    - uses: actions/download-artifact@v3
+      with:
+        name: pypi-artifacts
+        path: ${{ github.workspace }}/dist
+
+    - name: "environment configure"
       env:
         # Maximum cache period (in weeks) before forcing a cache refresh.
         CACHE_WEEKS: 2
       run: |
         echo "CACHE_PERIOD=$(date +%Y).$(expr $(date +%U) / ${CACHE_WEEKS})" >> ${GITHUB_ENV}
+        echo "LOCK_FILE=requirements/locks/${{ matrix.version }}-lock-linux-64.txt" >> ${GITHUB_ENV}
 
-    - name: "Conda package cache"
-      uses: actions/cache@v3
-      env:
-        # Increment the build number to force a cache refresh.
-        CACHE_BUILD: 0
+    - name: "conda package cache"
+      uses: ./.github/workflows/composite/conda-pkg-cache
       with:
-        path: ~/conda_pkgs_dir
-        key: ${{ runner.os }}-conda-pkgs-${{ env.ENV_NAME }}-${{ matrix.version }}-p${{ env.CACHE_PERIOD }}-b${{ env.CACHE_BUILD }}
+        cache_build: 0
+        cache_period: ${{ env.CACHE_PERIOD }}
+        env_name: ${{ env.ENV_NAME }}
 
-    - name: "Conda install"
+    - name: "conda install"
       uses: conda-incubator/setup-miniconda@v2
       with:
         miniforge-version: latest
@@ -94,36 +111,33 @@ jobs:
         auto-update-conda: false
         use-only-tar-bz2: true
 
-    - name: "Conda environment cache"
-      id: conda-env-cache
-      uses: actions/cache@v3
-      env:
-        # Increment the build number to force a cache refresh.
-        CACHE_BUILD: 0
+    - name: "conda environment cache"
+      uses: ./.github/workflows/composite/conda-env-cache
       with:
-        path: ${{ env.CONDA }}/envs/${{ env.ENV_NAME }}
-        key: ${{ runner.os }}-conda-env-${{ env.ENV_NAME }}-${{ matrix.version }}-p${{ env.CACHE_PERIOD }}-b${{ env.CACHE_BUILD }}
+        cache_build: 0
+        cache_period: ${{ env.CACHE_PERIOD }}
+        env_name: ${{ env.ENV_NAME }}
+        install_packages: "pip tox"
 
-    - name: "Conda environment update"
-      if: steps.conda-env-cache.outputs.cache-hit != 'true'
-      run: |
-        conda install --file ${{ github.workspace }}/requirements/locks/${{ matrix.version }}-lock-linux-64.txt
-
-    - name: "Conda info"
+    - name: "conda info"
       run: |
         conda info
         conda list
 
-    - uses: actions/download-artifact@v3
+    - name: "tox cache"
+      uses: ./.github/workflows/composite/tox-cache
       with:
-        name: pypi-artifacts
-        path: ${{ github.workspace }}/dist
+        cache_build: 0
+        lock_file: ${{ env.LOCK_FILE }}
 
-    - name: "Install and import bdist"
-      working-directory: ${{ github.workspace }}/dist
+    - name: "test wheel (${{ matrix.version }})"
+      env:
+        TESTENV: "${{ matrix.version }}-linux-${{ matrix.session }}"
       run: |
-        python -m pip install geovista-*.whl
-        python -c "import geovista; print(f'Successfully imported geovista-{geovista.__version__}')"
+        WHEEL=$(ls -1 dist/*.whl)
+        tox -e ${{ env.TESTENV }} --run-command "python -m pip uninstall --yes ${WHEEL}"
+        tox -e ${{ env.TESTENV }} --run-command "python -m pip install ${WHEEL}"
+        tox -e ${{ env.TESTENV }} --run-command "python -c 'import geovista; print(geovista.__version__)'"
 
 
   publish-artifacts-test-pypi:
