--- a/tox.ini
+++ b/tox.ini
@@ -32,6 +32,23 @@ commands =
     conda-lock --channel conda-forge --kind explicit --file {env:TMPFILE} --platform linux-64 --filename-template "{envname}-\{platform\}.txt" {posargs}
 
 
+[testenv:py{38,39,310}-{linux,osx,win}-env]
+conda_spec =
+    py38-linux: {toxinidir}{/}requirements{/}locks{/}py38-lock-linux-64.txt
+    py39-linux: {toxinidir}{/}requirements{/}locks{/}py39-lock-linux-64.txt
+    py310-linux: {toxinidir}{/}requirements{/}locks{/}py310-lock-linux-64.txt
+    py38-osx: {toxinidir}{/}requirements{/}locks{/}py38-lock-osx-64.txt
+    py39-osx: {toxinidir}{/}requirements{/}locks{/}py39-lock-osx-64.txt
+    py310-osx: {toxinidir}{/}requirements{/}locks{/}py310-lock-osx-64.txt
+    py38-win: {toxinidir}{/}requirements{/}locks{/}py38-lock-win-64.txt
+    py39-win: {toxinidir}{/}requirements{/}locks{/}py39-lock-win-64.txt
+    py310-win: {toxinidir}{/}requirements{/}locks{/}py310-lock-win-64.txt
+description =
+    Create an environment only containing geovista dependencies.
+skip_install =
+    true
+
+
 [testenv:py{38,39,310}-{linux,osx,win}-tests]
 conda_spec =
     py38-linux: {toxinidir}{/}requirements{/}locks{/}py38-lock-linux-64.txt
