drop end-of-line-fixer

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,11 +16,9 @@ repos:
         # Check for debugger imports and py37+ `breakpoint()` calls in Python source.
     -   id: debug-statements
         # Check TOML file syntax.
-        id: check-toml
+    -   id: check-toml
         # Check YAML file syntax.
-        id: check-yaml
-        # Makes sure files end in a newline and only a newline.
-        id: end-of-file-fixer
+    -   id: check-yaml
         # Don't commit to main branch.
 #    -   id: no-commit-to-branch
 
