--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@
 
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.3.0
+    rev: "v4.3.0"
     hooks:
         # Prevent giant files from being committed.
     -   id: check-added-large-files
@@ -23,28 +23,33 @@ repos:
 #    -   id: no-commit-to-branch
 
 -   repo: https://github.com/psf/black
-    rev: 22.6.0
+    rev: "22.6.0"
     hooks:
     -   id: black
         types: [file, python]
         args: [--config=./pyproject.toml]
 
 -   repo: https://github.com/PyCQA/flake8
-    rev: 4.0.1
+    rev: "4.0.1"
     hooks:
     -   id: flake8
         types: [file, python]
         args: [--config=./setup.cfg]
 
 -   repo: https://github.com/PyCQA/isort
-    rev: 5.10.1
+    rev: "5.10.1"
     hooks:
     -   id: isort
         types: [file, python]
         args: [--filter-files]
 
 -   repo: https://github.com/aio-libs/sort-all
-    rev: v1.2.0
+    rev: "v1.2.0"
     hooks:
     -   id: sort-all
         types: [file, python]
+
+-   repo: https://github.com/mgedmin/check-manifest
+    rev: "0.48"
+    hooks:
+    -   id: check-manifest
