--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,16 @@
 prune .github
+include .git_archival.txt
+include .gitattributes
 exclude .gitignore
+exclude .pre-commit-config.yaml
+exclude .pylintrc
+exclude .readthedocs.yml
+exclude codcov.yml
+prune docs
 prune branding
-prune docs/_build
+prune docs
 prune examples
+include lib/geovista/registry.txt
+prune lib/geovista/tests
+prune requirements
+exclude tox.ini
