pooch sample ww3 tri

--- a/requirements/geovista.yml
+++ b/requirements/geovista.yml
@@ -19,6 +19,9 @@ dependencies:
   - pyvistaqt
   - vtk >=9
 
+# sample data dependencies
+  - netcdf4
+
 # cmap dependencies
   - cmocean
   - colorcet
