--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@
 #   https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
 #   https://gitlab.com/pycqa/flake8-docstrings
 max-line-length = 88
-max-complexity = 20
+max-complexity = 21
 docstring-convention = numpy
 select = C,D,E,F,W,B,B950
 ignore =
@@ -70,6 +70,7 @@ install_requires =
     cartopy>=0.20
     click
     click-default-group
+    netCDF4
     pooch
     pyproj>=3.3
     pyvista
