--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@
 #   https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
 #   https://gitlab.com/pycqa/flake8-docstrings
 max-line-length = 88
-max-complexity = 21
+max-complexity = 18
 docstring-convention = numpy
 select = C,D,E,F,W,B,B950
 ignore =
@@ -27,7 +27,8 @@ ignore =
     W504
 exclude =
     .eggs
-    build
+    _build
+    cli.py
 
 [metadata]
 author = GeoVista Contributors
