--- a/codcov.yml
+++ b/codcov.yml
@@ -1,7 +1,8 @@
 coverage:
+  # see https://docs.codecov.com/docs/commit-status
   status:
     project:
       default:
-        target: auto 
-        threshold: 10%  # coverage can drop by up to <threshold>% while still posting success
+        target: 20 
+        threshold: 1%  # coverage can drop by up to <threshold>% while still posting success
     patch: off
