update pypi metadata keywords

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,10 +49,13 @@ long_description = file: README.md
 long_description_content_type = text/markdown
 keywords =
     cartography
+    curvilinear
     earth-science
     mesh
     pyvista
+    rectilinear
     ugrid
+    unstructured
     vtk
 license_files = LICENSE
 name = geovista
