add more keywords

--- a/setup.cfg
+++ b/setup.cfg
@@ -51,7 +51,9 @@ keywords =
     cartography
     curvilinear
     earth-science
+    grid
     mesh
+    python
     pyvista
     rectilinear
     ugrid
