--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,110 @@
 [build-system]
-# Defined by PEP 518
 requires = [
-    "setuptools>=45",
-    "setuptools_scm[toml]>=7",
-    "wheel"
+    "hatchling>=1.6.0",
+    "hatch-vcs>=0.2.0",
 ]
-# Defined by PEP 517
-build-backend = "setuptools.build_meta"
+build-backend = "hatchling.build"
 
+[project]
+name = "geovista"
+description = "Cartographic rendering and mesh analytics powered by PyVista"
+readme.file = "README.md"
+readme.content-type= "text/markdown"
+license = "BSD-3-Clause"
+requires-python = ">=3.8"
+authors = [
+    { name = "GeoVista Contributors", email = "geovista.pub@gmail.com" },
+]
+keywords = [
+    "cartography",
+    "curvilinear",
+    "earth-science",
+    "grid",
+    "mesh",
+    "python",
+    "pyvista",
+    "rectilinear",
+    "ugrid",
+    "unstructured",
+    "vtk",
+]
+classifiers = [
+    "Development Status :: 1 - Planning",
+    "Intended Audience :: Science/Research",
+    "License :: OSI Approved :: BSD License",
+    "Natural Language :: English",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Topic :: Scientific/Engineering :: Atmospheric Science",
+]
+dependencies = [
+    "cartopy>=0.20",
+    "click",
+    "click-default-group",
+    "netCDF4",
+    "pooch",
+    "pyproj>=3.3",
+    "pyvista",
+    "pyvistaqt",
+    "vtk>=9",
+]
+dynamic = [
+    "version",
+]
+
+[project.optional-dependencies]
+cmap = [
+    "cmocean",
+    "colorcet",
+]
+docs = [
+    "jupyter-sphinx",
+    "pydata-sphinx-theme<0.9",
+    "pythreejs",
+    "sphinx",
+    "sphinx-copybutton",
+]
+test = [
+    "codecov",
+    "hatchling>=1.6.0",
+    "hatch-vcs>=0.2.0",
+    "pre-commit",
+    "pytest-cov",
+    "pytest>=6.0",
+]
+
+[project.scripts]
+geovista = "geovista.cli:main"
+
+[project.urls]
+Code = "https://github.com/bjlittle/geovista"
+Discussions = "https://github.com/bjlittle/geovista/discussions"
+Documentation = "https://geovista.readthedocs.io/en/latest"
+Homepage = "https://github.com/bjlittle/geovista"
+Issues = "https://github.com/bjlittle/geovista/issues"
+
+[tool.hatch]
+version.source = "vcs"
+version.raw-options.local_scheme = "dirty-tag"
+build.hooks.vcs.version-file = "src/geovista/_version.py"
+build.targets.wheel.packages = [
+    "src/geovista",
+]
+build.targets.sdist.include = [
+    "/src",
+]
 
 [tool.black]
 line-length = 88
-target-version = ["py38", "py39", "py310"]
-include = '\.pyi?$'
-
+target-version = [
+    "py38",
+    "py39",
+    "py310",
+]
+include = "\\.pyi?$"
 
 [tool.isort]
 force_sort_within_sections = "True"
@@ -23,13 +114,7 @@ profile = "black"
 skip_gitignore = "True"
 verbose = "False"
 
-
-[tool.setuptools_scm]
-write_to = "lib/geovista/_version.py"
-local_scheme = "dirty-tag"
-
-
-[tool.check-manifest]
-ignore = [
-    "lib/geovista/_version.py",
-]
+[tool.pytest.ini_options]
+addopts = "-ra -v --doctest-modules"
+doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS NUMBER"
+testpaths = "src/geovista"
