--- a/requirements/geovista.yml
+++ b/requirements/geovista.yml
@@ -6,8 +6,8 @@ channels:
 dependencies:
 
 # setup dependencies
-  - setuptools >=45
-  - setuptools-scm >=7
+  - hatchling
+  - hatch-vcs
 
 # core dependencies
   - cartopy >=0.20
