--- a/tox.ini
+++ b/tox.ini
@@ -98,6 +98,7 @@ setenv =
 usedevelop =
     true
 commands =
+    ls -l ../src/geovista
     sphinx-build -W --keep-going -b {env:BUILDER} -d {env:BUILDDIR}{/}doctrees {env:SRCDIR} {env:BUILDDIR}{/}{env:BUILDER} {posargs}
 
 
