--- a/tox.ini
+++ b/tox.ini
@@ -97,8 +97,10 @@ setenv =
     GEOVISTA_POOCH_MUTE = True
 usedevelop =
     true
+allowlist_externals = 
+    ls
 commands =
-    ls -l ../src/geovista
+    ls -l {toxinidir}/src/geovista
     sphinx-build -W --keep-going -b {env:BUILDER} -d {env:BUILDDIR}{/}doctrees {env:SRCDIR} {env:BUILDDIR}{/}{env:BUILDER} {posargs}
 
 
