--- a/tox.ini
+++ b/tox.ini
@@ -95,8 +95,8 @@ setenv =
     SRCDIR = {toxinidir}/docs/src
     PYVISTA_OFF_SCREEN = True
     GEOVISTA_POOCH_MUTE = True
-usedevelop =
-    true
+#usedevelop =
+#    true
 allowlist_externals = 
     ls
 commands =
