--- a/tox.ini
+++ b/tox.ini
@@ -97,8 +97,7 @@ setenv =
     GEOVISTA_POOCH_MUTE = True
 #usedevelop =
 #    true
-isolated_build =
-    true
+isolated_build = True
 commands =
     sphinx-build -W --keep-going -b {env:BUILDER} -d {env:BUILDDIR}{/}doctrees {env:SRCDIR} {env:BUILDDIR}{/}{env:BUILDER} {posargs}
 
