--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,8 @@
 requires =
     tox-conda
     tox-run-command
+isolated_build =
+    true
  
  
 [testenv:py{38,39,310}-lock]
@@ -95,9 +97,8 @@ setenv =
     SRCDIR = {toxinidir}/docs/src
     PYVISTA_OFF_SCREEN = True
     GEOVISTA_POOCH_MUTE = True
-#usedevelop =
-#    true
-isolated_build = True
+usedevelop =
+    true
 commands =
     sphinx-build -W --keep-going -b {env:BUILDER} -d {env:BUILDDIR}{/}doctrees {env:SRCDIR} {env:BUILDDIR}{/}{env:BUILDER} {posargs}
 
