--- a/tox.ini
+++ b/tox.ini
@@ -97,8 +97,8 @@ setenv =
     SRCDIR = {toxinidir}/docs/src
     PYVISTA_OFF_SCREEN = True
     GEOVISTA_POOCH_MUTE = True
-usedevelop =
-    true
+#usedevelop =
+#    true
 commands =
     sphinx-build -W --keep-going -b {env:BUILDER} -d {env:BUILDDIR}{/}doctrees {env:SRCDIR} {env:BUILDDIR}{/}{env:BUILDER} {posargs}
 
