--- a/tox.ini
+++ b/tox.ini
@@ -2,8 +2,6 @@
 requires =
     tox-conda
     tox-run-command
-isolated_build =
-    true
  
  
 [testenv:py{38,39,310}-lock]
@@ -97,8 +95,8 @@ setenv =
     SRCDIR = {toxinidir}/docs/src
     PYVISTA_OFF_SCREEN = True
     GEOVISTA_POOCH_MUTE = True
-#usedevelop =
-#    true
+usedevelop =
+    true
 commands =
     sphinx-build -W --keep-going -b {env:BUILDER} -d {env:BUILDDIR}{/}doctrees {env:SRCDIR} {env:BUILDDIR}{/}{env:BUILDER} {posargs}
 
