--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -90,13 +90,14 @@ jobs:
     - name: "conda environment cache"
       uses: ./.github/workflows/composite/conda-env-cache
       with:
-        cache_build: 0
+        cache_build: 1
         cache_period: ${{ env.CACHE_PERIOD }}
         env_name: ${{ env.ENV_NAME }}
-        install_packages: "cartopy pip tox"
+        install_packages: "cartopy pip"
 
     - name: "conda info"
       run: |
+        pip install --pre tox
         conda info
         conda list
 
