--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -98,6 +98,7 @@ jobs:
     - name: "conda info"
       run: |
         pip install --pre tox
+        pip install git+https://github.com/tox-dev/tox-conda.git@tox-4
         conda info
         conda list
 
