use experimental conda-libmamba-solver

--- a/tox.ini
+++ b/tox.ini
@@ -16,11 +16,13 @@ conda_create_args =
 conda_deps =
     pip
     conda-lock
+    conda-libmamba-solver
 description =
     Create explicit environment specification conda lock files for geovista dependencies.
 platform =
     linux|darwin
 setenv =
+    CONDA_EXPERIMENTAL_SOLVER = libmamba
     LOCKDIR = {toxinidir}{/}requirements{/}locks
     TMPFILE = {envtmpdir}{/}geovista.yml
     YMLFILE = {toxinidir}{/}requirements{/}geovista.yml
