--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@
 #   https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
 #   https://gitlab.com/pycqa/flake8-docstrings
 max-line-length = 88
-max-complexity = 18
+max-complexity = 19
 docstring-convention = numpy
 select = C,D,E,F,W,B,B950
 ignore =
@@ -75,7 +75,7 @@ install_requires =
     cartopy>=0.20
     click
     click-default-group
-    netCDF4
+    netCDF4!=1.6.1
     pooch
     pyproj>=3.3
     pyvista
