--- a/tox.ini
+++ b/tox.ini
@@ -22,7 +22,6 @@ description =
 platform =
     linux|darwin
 setenv =
-    CONDA_EXPERIMENTAL_SOLVER = libmamba
     LOCKDIR = {toxinidir}{/}requirements{/}locks
     TMPFILE = {envtmpdir}{/}geovista.yml
     YMLFILE = {toxinidir}{/}requirements{/}geovista.yml
@@ -31,7 +30,7 @@ skip_install =
 commands =
     cp {env:YMLFILE} {env:TMPFILE}
     python -c 'from sys import version_info as v; fh = open("{env:TMPFILE}", "a"); fh.write(f"\n  - python =\{v.major\}.\{v.minor\}\n")'
-    conda-lock --channel conda-forge --kind explicit --file {env:TMPFILE} --platform linux-64 --filename-template "{envname}-\{platform\}.txt" {posargs}
+    CONDA_EXPERIMENTAL_SOLVER=libmamba conda-lock --channel conda-forge --kind explicit --file {env:TMPFILE} --platform linux-64 --filename-template "{envname}-\{platform\}.txt" {posargs}
 
 
 [testenv:py{38,39,310}-{linux,osx,win}-env]
