--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,6 @@ conda_create_args =
 conda_deps =
     pip
     conda-lock
-    conda-libmamba-solver
 description =
     Create explicit environment specification conda lock files for geovista dependencies.
 platform =
@@ -30,7 +29,7 @@ skip_install =
 commands =
     cp {env:YMLFILE} {env:TMPFILE}
     python -c 'from sys import version_info as v; fh = open("{env:TMPFILE}", "a"); fh.write(f"\n  - python =\{v.major\}.\{v.minor\}\n")'
-    CONDA_EXPERIMENTAL_SOLVER=libmamba conda-lock --channel conda-forge --kind explicit --file {env:TMPFILE} --platform linux-64 --filename-template "{envname}-\{platform\}.txt" {posargs}
+    conda-lock --channel conda-forge --kind explicit --file {env:TMPFILE} --platform linux-64 --filename-template "{envname}-\{platform\}.txt" {posargs}
 
 
 [testenv:py{38,39,310}-{linux,osx,win}-env]
