--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ requires =
 [testenv:py{38,39,310}-lock]
 allowlist_externals =
     cp
+    time
 changedir =
     {env:LOCKDIR}
 conda_channels =
@@ -29,7 +30,7 @@ skip_install =
 commands =
     cp {env:YMLFILE} {env:TMPFILE}
     python -c 'from sys import version_info as v; fh = open("{env:TMPFILE}", "a"); fh.write(f"\n  - python =\{v.major\}.\{v.minor\}\n")'
-    conda-lock --channel conda-forge --kind explicit --file {env:TMPFILE} --platform linux-64 --filename-template "{envname}-\{platform\}.txt" {posargs}
+    time conda-lock --channel conda-forge --kind explicit --file {env:TMPFILE} --platform linux-64 --filename-template "{envname}-\{platform\}.txt" {posargs}
 
 
 [testenv:py{38,39,310}-{linux,osx,win}-env]
