--- a/requirements/geovista.yml
+++ b/requirements/geovista.yml
@@ -13,15 +13,14 @@ dependencies:
   - cartopy >=0.20
   - click
   - click-default-group
-  - netcdf4 !=1.6.1
   - pooch
   - pyproj >=3.3
   - pyvista
   - pyvistaqt
   - vtk >=9
 
-# sample data dependencies
-  - netcdf4
+# pantry dependencies
+  - netcdf4 !=1.6.1
 
 # cmap dependencies
   - cmocean
