add samples and infrastructure tidy

--- a/codecov.yml
+++ b/codecov.yml
@@ -6,3 +6,9 @@ coverage:
         target: 20 
         threshold: 10%  # coverage can drop by up to <threshold>% while still posting success
     patch: off
+
+ignore:
+  - registry.txt
+  - pantry.py
+  - samples.py
+
