--- a/setup.cfg
+++ b/setup.cfg
@@ -80,7 +80,7 @@ install_requires =
     pyproj>=3.3
     pyvista
     pyvistaqt
-    vtk>=9
+    vtk>=9,<9.2
 package_dir =
     =lib
 packages = find_namespace:
@@ -119,4 +119,5 @@ addopts =
     -ra
     -v
     --doctest-modules
+    --doctest-continue-on-failure
 doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS NUMBER
