--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,7 +5,7 @@ exclude .gitignore
 exclude .pre-commit-config.yaml
 exclude .pylintrc
 exclude .readthedocs.yml
-exclude codcov.yml
+exclude codecov.yml
 prune branding
 prune docs
 prune examples
