--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,12 @@ target-version = ["py38", "py39", "py310"]
 include = '\.pyi?$'
 
 
+[tool.check-manifest]
+ignore = [
+    "lib/geovista/_version.py",
+]
+
+
 [tool.isort]
 force_sort_within_sections = "True"
 known_first_party = "geovista"
@@ -24,12 +30,14 @@ skip_gitignore = "True"
 verbose = "False"
 
 
+[tool.pytest.ini_options]
+addopts = "-ra -v --doctest-modules --doctest-continue-on-failure --import-mode=importlib"
+minversion = "6.0"
+doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS NUMBER"
+testpaths = "tests"
+
+
 [tool.setuptools_scm]
 write_to = "lib/geovista/_version.py"
 local_scheme = "dirty-tag"
 
-
-[tool.check-manifest]
-ignore = [
-    "lib/geovista/_version.py",
-]
