--- a/setup.cfg
+++ b/setup.cfg
@@ -77,6 +77,7 @@ install_requires =
     click-default-group
     netCDF4!=1.6.1
     pooch
+    pykdtree
     pyproj>=3.3
     pyvista
     pyvistaqt
