--- a/setup.cfg
+++ b/setup.cfg
@@ -81,7 +81,7 @@ install_requires =
     pyproj>=3.3
     pyvista
     pyvistaqt
-    vtk>=9,<9.2
+    vtk>=9
 package_dir =
     =lib
 packages = find_namespace:
