Add vtkAlgorithm support

--- a/setup.cfg
+++ b/setup.cfg
@@ -54,7 +54,7 @@ keywords =
     grid
     mesh
     python
-    pyvista
+    pyvista @ git+https://github.com/pyvista/pyvista@feat/algorithms#egg=pyvista
     rectilinear
     ugrid
     unstructured
@@ -87,7 +87,7 @@ package_dir =
 packages = find_namespace:
 python_requires =
     >=3.8
-zip_safe = False 
+zip_safe = False
 
 [options.entry_points]
 console_scripts =
