--- a/setup.cfg
+++ b/setup.cfg
@@ -54,7 +54,7 @@ keywords =
     grid
     mesh
     python
-    pyvista @ git+https://github.com/pyvista/pyvista@feat/algorithms#egg=pyvista
+    pyvista
     rectilinear
     ugrid
     unstructured
@@ -79,9 +79,9 @@ install_requires =
     pooch
     pykdtree
     pyproj>=3.3
-    pyvista
+    pyvista @ git+https://github.com/pyvista/pyvista@feat/algorithms#egg=pyvista
     pyvistaqt
-    vtk>=9
+    vtk  # Do not limit version
 package_dir =
     =lib
 packages = find_namespace:
