--- a/setup.cfg
+++ b/setup.cfg
@@ -75,7 +75,7 @@ install_requires =
     cartopy>=0.20
     click
     click-default-group
-    netCDF4!=1.6.1
+    netCDF4<1.6.1
     pooch
     pykdtree
     pyproj>=3.3
@@ -102,7 +102,7 @@ docs =
     sphinx-copybutton
     jupyter-sphinx
     pydata-sphinx-theme<0.9
-    pythreejs
+    panel
 dev =
     pre-commit
 test =
