--- a/docs/Makefile
+++ b/docs/Makefile
@@ -2,6 +2,7 @@
 #
 
 export PYVISTA_OFF_SCREEN := True
+export PYDEVD_DISABLE_FILE_VALIDATION := 1
 
 # You can set these variables from the command line, and also
 # from the environment for the first two.
