--- a/requirements/geovista.yml
+++ b/requirements/geovista.yml
@@ -18,7 +18,7 @@ dependencies:
   - pyproj >=3.3
   - pyvista
   - pyvistaqt
-  - vtk >=9
+  - vtk <9.2
 
 # pantry dependencies
   - netcdf4 <1.6.1
