--- a/setup.cfg
+++ b/setup.cfg
@@ -81,7 +81,7 @@ install_requires =
     pyproj>=3.3
     pyvista
     pyvistaqt
-    vtk<9.2
+    vtk
 package_dir =
     =lib
 packages = find_namespace:
@@ -102,7 +102,7 @@ docs =
     sphinx-copybutton
     jupyter-sphinx
     pydata-sphinx-theme<0.9
-    panel
+    pythreejs
 dev =
     pre-commit
 test =
