--- a/tox.ini
+++ b/tox.ini
@@ -99,4 +99,5 @@ setenv =
 usedevelop =
     true
 commands =
-    sphinx-build -W --keep-going -b {env:BUILDER} -d {env:BUILDDIR}{/}doctrees {env:SRCDIR} {env:BUILDDIR}{/}{env:BUILDER} {posargs}
+    # -W --keep-going
+    sphinx-build -b {env:BUILDER} -d {env:BUILDDIR}{/}doctrees {env:SRCDIR} {env:BUILDDIR}{/}{env:BUILDER} {posargs}
