--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,4 +40,5 @@ testpaths = "tests"
 [tool.setuptools_scm]
 write_to = "lib/geovista/_version.py"
 local_scheme = "dirty-tag"
+#version_scheme = "release-branch-semver"
 
