--- a/setup.cfg
+++ b/setup.cfg
@@ -83,7 +83,7 @@ install_requires =
     pyvistaqt
     vtk
 package_dir =
-    =lib
+    =src
 packages = find_namespace:
 python_requires =
     >=3.8
@@ -111,4 +111,4 @@ test =
     pytest-cov
 
 [options.packages.find]
-where = lib
+where = src
