--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -9,8 +9,8 @@ exclude codecov.yml
 prune branding
 prune docs
 prune examples
-include lib/geovista/registry.txt
-prune lib/geovista/tests
+include src/geovista/registry.txt
+prune src/geovista/tests
 prune requirements
 prune tests
 exclude tox.ini
